--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,39 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title> Coursera test!</title>
-    </head>
-    <body>
-        <H1>Hello!</H1>
-    </body>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Module 2</title>
+<link rel="stylesheet" href="module2.css">
+</head>
+<body>
+<h1>Our Menu</h1>
+ 
+ <div class="co">
+   
+  <div class="conteneur col-lg-3 col-md-5 col-ms-6">
+    <div class="titre_container">Chicken</div>
+    <p>2 éléments de type inline se mettent par défaut l'un à côté de l'autre. 
+      C'est là que <b>vertical-align</b> intervient, pour ajuster en hauteur cet alignement.</p>
+   
+  
+    </div>
+<div class="conteneur col-lg-3 col-md-5 col-ms-6">
+  <div class="titre_container ">Beef</div>
+  <p>2 éléments de type inline se mettent par défaut l'un à côté de l'autre. 
+    C'est là que <b>vertical-align</b> intervient, pour ajuster en hauteur cet alignement.</p>
+ 
+
+  </div>
+<div class="conteneur col-lg-3 col-md-10 col-ms-6">
+  <div class="titre_container ">Pizza</div>
+  <p>2 éléments de type inline se mettent par défaut l'un à côté de l'autre. 
+    C'est là que <b>vertical-align</b> intervient, pour ajuster en hauteur cet alignement.</p>
+ 
+
+  </div>
+
+</div>
+ 
+</body>
 </html>
